# fp-homework

./: README.md  stack.yaml
bonus/: README.md  bonus.cabal
bonus/src/: Lib.hs
hw1/: README.md  hw1.cabal
hw1/src/: Lib.hs  Test.hs
hw2/: hw2.cabal
hw2/app/: Main.hs
hw2/src/: Instances.hs  Lib.hs  Monad1.hs  Monad2.hs
hw2/test/: Spec.hs
hw3/: LICENSE  README.md  hw3.cabal
hw3/src/: Lib.hs
hw3/test/: Spec.hs
