name:                bonus
version:             0.1.0.0
synopsis:            Synopsis for bonus task
description:         Bonus task for FP ITMO course

homepage:            https://github.com/antkhorin/fp-homework/tree/master/bonus#readme
license:             MIT
license-file:        LICENSE
author:              Anton Khorin
maintainer:          antkhorin@gmail.com
copyright:           2017 Anton Khorin

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
